# Axiom_PC

./: .gitignore  Axiom.jucer  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AI/: DdspEncoder.cpp  DdspEncoder.h  InferenceEngine.h  OnnxInferenceEngine.cpp  Reconstructor.cpp  Reconstructor.h  StemSeparation.cpp  StemSeparation.h  StemSeparator.h
Source/Analysis/: AudioAnalyzer.cpp  AudioAnalyzer.h  PitchDetector.cpp  PitchDetector.h
Source/Core/: AnalysisFeatures.h  AppPaths.h  AudioZone.h  DdspTimbre.h  InstrumentPatch.h  ParamIDs.h  SamplerSource.h
Source/Export/: InstrumentExporter.cpp  InstrumentExporter.h
Source/GUI/: AxiomLookAndFeel.cpp  AxiomLookAndFeel.h  EmbeddingSphereView.cpp  EmbeddingSphereView.h  PatchView.cpp  PatchView.h  PresetBar.cpp  PresetBar.h  WaveformView.cpp  WaveformView.h
Source/Preset/: PresetManager.cpp  PresetManager.h
Source/Synth/: DdspResynth.h  EffectsChain.h  SkSampler.h  SynthEngine.cpp  SynthEngine.h  SynthModules.h  Voice.h  Wavetable.h
docs/: ARCHITECTURE.md
